<resources>
    <string name="app_name">CANAComercio</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="logotipo">Logotipo</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_employee">Empleados</string>
    <string name="title_offer">Ofertas</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_sales">Ventas</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbar_tittle_home">Inicio</string>
</resources>